06-deploying-demo-application/api-node/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metedata:
  name: api-node
  namespace: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-node
  template:
    metadata:
      labels:
        app: api-node
    spec:
      containers:
        - name: api-node
          image: ghcr.io/learnk8s/api-node:latest
          ports:
            - containerPort: 3000
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ping
              port: 3000
          resources:
            limits:
              memory: "100Mi"
            requests:
              cpu: "50m"
              memory: "64Mi"
          securiryContext:
            allowPrivilegeEscalation: false
            privileged: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
