06-deploying-demo-application/api-node/Service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: api-node
  namespace: demo-app
spec:
  selector:
    app: api-node
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
